--- a/src/app/shared/details/details.component.html
+++ b/src/app/shared/details/details.component.html
@@ -26,11 +26,11 @@
 
     </form>
 
-    <button class="badge badge-danger mr-2" (click)="deleteWaterMeter()">
+    <button  mat-raised-button class="btndelete" (click)="deleteWaterMeter()">
       Törlés
     </button>
 
-    <button type="submit" class="badge badge-success" (click)="updateWaterMeter()">
+    <button mat-stroked-button type="submit" class="btnupdte" (click)="updateWaterMeter()">
       Frissítés
     </button>
     <p>{{ message }}</p>
