--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,31 +1,27 @@
 <div class="list row">
   <div class="col-md-6">
     <h4>Vízóra lista</h4>
-    <ul class="list-group">
-      @for (waterMeter of waterMeters; track waterMeter.id; let i = $index) {
-        <li
-          class="list-group-item"
-          [class.active]="i == currentIndex"
-          (click)="setActiveWaterMeter(waterMeter, i)"
-        >
-          {{ waterMeter.title | uppercase }}
-        </li>
-      }
-    </ul>
+    <mat-list class="mat-list">
+      <mat-list-item
+        *ngFor="let waterMeter of waterMeters; trackBy: trackById; let i = index"
+        [class.active]="i == currentIndex"
+        (click)="setActiveWaterMeter(waterMeter, i)"
+        appHighlightOnClick
+      >
+        {{ waterMeter.title | uppercase }}
+      </mat-list-item>
+    </mat-list>
   </div>
   <div class="col-md-6">
-    @if (currentWaterMeter) {
-      <div>
-        <app-details
-          (refreshList)="refreshList()"
-          [waterMeter]="currentWaterMeter"
-        ></app-details>
-      </div>
-    } @else {
-      <div>
-        <br />
-        <p>Kérlek válassz egy vízórát...</p>
-      </div>
-    }
+    <div *ngIf="currentWaterMeter">
+      <app-details
+        (refreshList)="refreshList()"
+        [waterMeter]="currentWaterMeter"
+      ></app-details>
+    </div>
+    <div *ngIf="!currentWaterMeter">
+      <br />
+      <p>Kérlek válassz egy vízórát...</p>
+    </div>
   </div>
 </div>
